<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/cover_movie"
        android:src="@drawable/baseline_pending_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_item_release"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:paddingStart="6dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="@+id/img_poster"
        tools:text="@string/release" />

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:padding="6dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_item_release"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_release"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_item_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/blue_200"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_item_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
        tools:text="@string/genre" />

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/img_poster"
        app:layout_constraintBottom_toTopOf="@id/label_description"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:elevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <TextView
                    android:id="@+id/label_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/rating"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_item_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@id/label_rating"
                    app:layout_constraintTop_toBottomOf="@id/label_rating"
                    android:text="@string/rating" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:elevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <TextView
                    android:id="@+id/label_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_item_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@id/label_score"
                    app:layout_constraintTop_toBottomOf="@id/label_score"
                    android:text="@string/score" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:elevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <TextView
                    android:id="@+id/label_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/duration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_item_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@id/label_duration"
                    app:layout_constraintTop_toBottomOf="@id/label_duration"
                    android:text="@string/duration" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/ll_info"
        app:layout_constraintStart_toStartOf="@id/img_poster"
        />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="6dp"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/label_description"
        app:layout_constraintStart_toStartOf="@id/label_description"
        />

    <Button
        android:id="@+id/favorite_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_to_favorite"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/tv_item_description"
        app:layout_constraintStart_toStartOf="@id/tv_item_description"
        android:drawableEnd="@drawable/ic_baseline_favorite_border_24"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />


</androidx.constraintlayout.widget.ConstraintLayout>